--- a/less/bizo/report-metrics.less
+++ b/less/bizo/report-metrics.less
@@ -45,7 +45,7 @@ li.metric-unit {
 //Reduces the prominence of metrics in child rows
 tr.sub-item {
   label.checkbox {
-    margin-left: 43px;
+    margin-left: 21px;
   }
   .metric-medium {
 	font-size:16px;
