--- a/less/tables.less
+++ b/less/tables.less
@@ -239,5 +239,5 @@ table th[class*="span"],
 //Report Table (used for ads in campaign report tables)
 .report-table td > label {
   display:inline-block;
-  margin: 0 10px 0 22px;
+  margin: 0 10px 0 0px;
 }
